--- a/six.html
+++ b/six.html
@@ -9,29 +9,13 @@
     <title>Audio Visualization with p5.js</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-  <script src="/sketch.js"></script>
+  <script src="/sketch6.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
     
-    <p>body</p>
-    <a href="one.html">1</a>
-    <a href="two.html">2</a>
-    <a href="three.html">3</a>
-    <a href="four.html">4</a>
-    <a href="five.html">5</a>
-    <a href="six.html">6</a>
-    <a href="seven.html">7</a>
-    <a href="eight.html">8</a>
-    <p>lines</p>
-    <a href="nine.html">9</a>
-    <a href="ten.html">10</a>
-    <a href="eleven.html">11</a>
-    <a href="twelve.html">12</a>
-    <a href="thirteen.html">13</a>
-    <a href="fourteen.html">14</a>
-    <a href="fifteen.html">15</a>
+    
 
 
     <script src="main.js"></script>
