--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <p>body</p>
+    <p>more abstract</p>
     <a href="one.html">1</a>
     <a href="two.html">2</a>
     <a href="three.html">3</a>
