--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <h1>PAINT WITH YOUR VOICE</h1>
     
     <p>more abstract</p>
     <a href="one.html">1</a>
